stage/services/webserver-cluster/main.tf


provider "aws" {
    region = "us-east-2"
}

terraform {
    backend "s3" {
        # Replace this with your bucket name!
        bucket = "terraform-running-state-project1"
        key    = "stage/services/webserver-cluster/terraform.tfstate"
        region = "us-east-2"

        # Replace this with your DynamoDB table name!
        dynamodb_table = "terraform-up-and-running-locks"
        encrypt        = true
    }
}

# launch_configuration
resource "aws_launch_configuration" "example" {
  image_id        = "ami-0fb653ca2d3203ac1"
  instance_type   = "t2.micro"
  security_groups = [aws_security_group.instance.id]

  user_data = <<-EOF
              #!/bin/bash
              echo "Hello, World" >> index.html
              echo "${data.terraform_remote_state.db.outputs.address}" >> index.html
              echo "${data.terraform_remote_state.db.outputs.port}" >> index.html
              nohup busybox httpd -f -p ${var.server_port} &
              EOF

#   # Render the User Data script as a template
#   user_data = templatefile("user-data.sh", {
#     server_port = var.server_port
#     db_address  = data.terraform_remote_state.db.outputs.address
#     db_port     = data.terraform_remote_state.db.outputs.port
#   })

   # Required when using a launch configuration with an auto scaling group.
  lifecycle {
    create_before_destroy = true
  }
   
  #tags = {
  #      Name = "terraform-example"
  # }
}

#autoscaling_group
resource "aws_autoscaling_group" "example" {
    launch_configuration = aws_launch_configuration.example.name
    vpc_zone_identifier = data.aws_subnets.default.ids

    target_group_arns = [aws_lb_target_group.asg.arn]
    health_check_type = "ELB"

    min_size = 2
    max_size = 10

    tag {
        key = "Name"
        value = "terraform-asg-example"
        propagate_at_launch = true
    }
}

#data from aws_vpc
data "aws_vpc" "default" {
  default = true
}

#data from aws_subnets
data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

#date from mysql state file
data "terraform_remote_state" "db" {
    backend = "s3"
    config = {
        bucket = "terraform-running-state-project1"
        key    = "stage/data-stores/mysql/terraform.tfstate"
        region = "us-east-2"}
}

#security_groups for instance
resource "aws_security_group" "instance" {
    name = "terraform-example-instance"

    ingress {
        from_port = var.server_port
        to_port   = var.server_port
        protocol  = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

#aws_lb
resource "aws_lb" "example" {
  name               = "terraform-asg-example"
  load_balancer_type = "application"
  subnets            = data.aws_subnets.default.ids
  security_groups    = [aws_security_group.alb.id]
}

#load_balancer_listener
resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.example.arn
    port = 80
    protocol = "HTTP"

    # By default, return a simple 404 page
    default_action {
        type = "fixed-response"

        fixed_response {
            content_type = "text/plain"
            message_body = "404: page not found"
            status_code = 404
        }
    }
}


#lb-target-group
resource "aws_lb_target_group" "asg" {
    name = "terraform-asg-example"
    port = var.server_port
    protocol = "HTTP"
    vpc_id = data.aws_vpc.default.id

    health_check {
        path     = "/"
        protocol = "HTTP"
        matcher  = "200"
        interval = 15
        timeout  = 3
        healthy_threshold = 2
        unhealthy_threshold = 2
    }
}

#load_balancer_listener-rule
resource "aws_lb_listener_rule" "asg" {
    listener_arn = aws_lb_listener.http.arn
    priority = 100

    condition {
        path_pattern {
            values = ["*"]
        }
    }

    action {
        type   = "forward"
        target_group_arn = aws_lb_target_group.asg.arn
    }
}

#load_balancer_sg
resource "aws_security_group" "alb" {
    name = "terraform-example-alb"
    
    # Allow inbound HTTP requests
    ingress {
        from_port = 80
        to_port   = 80
        protocol  = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    # Allow all outbound requests
    egress {
        from_port = 0
        to_port   = 0
        protocol  = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
